--- a/templates/shop.hbs
+++ b/templates/shop.hbs
@@ -120,7 +120,7 @@
     <button class="btn btn-secondary w-100 mt-2" id="close-cart">Close</button>
   </div>
 
-  <!-- Product Image Modal -->
+  <!-- Product Image Modal code -->
   <div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content bg-dark border-0">
